<resources>
    <string name="app_name">vacayAndroid</string>
    <string name="event_name">EventName</string>
    <string name="event_image">Event Image</string>
    <string name="discover_on_button">Discover More</string>
    <string name="add_on_button">Add to Schedule</string>
    <string name="event_description">Event Description</string>
    <string name="event_price">Event Price</string>
    <string name="event_city">Event City</string>
    <string name="event_website">Event Website</string>
    <string name="login">Login</string>
    <string name="password">Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
