<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eventCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <ImageView
                android:id="@+id/event_image"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:background="@drawable/gradient_down"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_margin="16dp"
                android:textColor="#FFF"
                android:layout_alignParentBottom="true"
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_name" />
        </RelativeLayout>

        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/event_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Details:"
                android:textColor="#2d2d2d"
                android:textSize="16sp" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_description" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/event_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_city" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/event_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_price" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/event_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_website" />
        </LinearLayout>




    </LinearLayout>


</RelativeLayout>